add openapi spec for workflow endpoint
