# api/src/main/resources/org/dependencytrack/api/v2/openapi.yaml
@@ -34,70 +34,78 @@ servers:
 tags:
   - name: foo
     description: bar
-  - name: Project
-    description: /project
+  - name: workflow
+    description: /workflow
 paths:
-  /project/{uuid}/children:
+  /token/{uuid}/status:
     get:
       tags:
-        - Project
-      summary: Returns a list of all children for a project
-      description: Requires permission <strong>VIEW_PORTFOLIO</strong>
-      operationId: getChildrenProjects
+        - workflow
+      summary: Retrieves workflow states associated with the token received from bom upload.
+      description: Requires permission <strong>BOM_UPLOAD</strong>
+      operationId: getWorkflowStates
       parameters:
         - name: uuid
           in: path
-          description: UUID of the project to get the children from
+          description: The UUID of the token to query
           required: true
           schema:
             type: string
             format: uuid
-        - name: excludeInactive
-          in: query
-          description: Optionally excludes inactive projects from being returned
-          required: false
-          schema:
-            type: boolean
       responses:
         '200':
-          description: A list of all children for a project
+          description: A list of workflow states
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PaginatedProjectResponse'
+                $ref: '#/components/schemas/WorkflowState'
         '401':
           description: Unauthorized
-        '403':
-          description: Access to the requested project is forbidden
-          # content:
-          #   application/problem+json:
-          #     schema:
-          #       $ref: "#/components/schemas/ProblemDetails"
         '404':
-          description: The UUID of the project could not be found
+          description: Workflow does not exist
       security:
         - apiKeyAuth: [ ]
         - bearerAuth: [ ]
 components:
   schemas:
-    PaginatedProjectResponse:
+    WorkflowState:
       type: object
       properties:
-        total:
+        id:
           type: integer
-          description: Total number of teams
-        pageNumber:
-          type: integer
-          description: Current page number
-        pageSize:
-          type: integer
-          description: Number of items per page
-        objects:
-          type: array
-          items:
-            $ref: '#/components/schemas/Project'
-    Project:
-      type: object
+        parent:
+          $ref: '#/components/schemas/WorkflowState'
+        step:
+          type: string
+          enum:
+            - BOM_CONSUMPTION
+            - BOM_PROCESSING
+            - VULN_ANALYSIS
+            - REPO_META_ANALYSIS
+            - POLICY_EVALUATION
+            - METRICS_UPDATE
+            - POLICY_BUNDLE_SYNC
+            - PROJECT_CLONE
+        status:
+          type: string
+          enum:
+            - PENDING
+            - TIMED_OUT
+            - COMPLETED
+            - FAILED
+            - CANCELLED
+            - NOT_APPLICABLE
+        failureReason:
+          type: string
+        token:
+          type: string
+          format: uuid
+        startedAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
   securitySchemes:
     apiKeyAuth:
       name: X-Api-Key
